always show scrollbar + fix highlighting issue between buttons

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
     font-size: 13px;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 .control-button {
     line-height: 0;
     font-size: 30px;
